undo on price.html

--- a/pages/price/price.html
+++ b/pages/price/price.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +28,7 @@
                     <a class="nav-link" href="../../../../index.html">Main Page</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="price.html">Dock Packages and Pricing</a>
@@ -79,43 +80,7 @@
 
         <!--Package1 Section-->
         <div id="Package1" class="Package">
-
-            <div id="Package1_1">
-                <div class="packageImg">
-                    <img src="img/Package1.png" alt="Package1 10 feet dock image">
-                </div>
-
-                <div class="packageText">
-                    <h2>Package No. 1</h2>
-                    <div>
-                        <h3>10 Feet Length Price</h3>
-                        <table>
-                            <tr>
-                                <th>Width</th>
-                                <th>Price</th>
-                            </tr>
-                            <tr>
-                                <td>4 Feet Wide</td>
-                                <td>$1,208</td>
-                            </tr>
-                            <tr>
-                                <td>5 Feet Wide</td>
-                                <td>$1,473</td>
-                            </tr>
-                            <tr>
-                                <td>6 Feet Wide</td>
-                                <td>$1,740</td>
-                            </tr>
-                          </table>
-                    </div>
-                </div>
-
-            </div>
-
-            <div id="Package1_2">
-                
-            </div>
-            <div class="packageImg">
+            <div id="Package1Img" class="packageImg">
                 <img src="img/Package1.png" alt="Package1 10 feet dock image">
                 <img src="img/Package1_2.png" alt="Package1 8 feet dock image">
             </div>
