--- a/pages/price/price.html
+++ b/pages/price/price.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="../../../../index.html">Main Page</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../home.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="price.html">Dock Packages and Pricing</a>
