--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,8 +14,9 @@
 
     <script src="js/home.js"></script>
 </head>
+
 <body>
-    
+
     <!--NavBar-->
     <nav class="navbar fixed-top navbar-expand-lg justify-content-center">
         <a class="navbar-brand" href="#"><img src="img/EZIcon.png" alt="EZ Icon"></a>
@@ -49,7 +51,7 @@
                         <a class="dropdown-item" href="#">Warranty</a>
                         <a class="dropdown-item" href="#">Photo Gallery</a>
                         <a class="dropdown-item" href="#">Testimonials and Feedback</a>
-                </div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -167,26 +169,26 @@
 
     <!--Footer-->
     <div id="footer">
-          <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
+        <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
             <div class="card-body">
-              <h5 class="card-title">Copyright</h5>
-              <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
-              <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
+                <h5 class="card-title">Copyright</h5>
+                <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
+                <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
             </div>
-          </div>
-          <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
+        </div>
+        <div class="card" style="width: 20rem; border: none; background-color: rgb(235, 235, 235)">
             <div class="card-body">
-              <h5 class="card-title">Contact</h5>
-              <p class="card-text">ph: (603) 942-7355</p>
-              <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
+                <h5 class="card-title">Contact</h5>
+                <p class="card-text">ph: (603) 942-7355</p>
+                <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
             </div>
-          </div>
-          <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
+        </div>
+        <div class="card" style="width: 18rem; border: none; background-color: rgb(235, 235, 235)">
             <div class="card-body">
-              <h5 class="card-title">Address</h5>
-              <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
+                <h5 class="card-title">Address</h5>
+                <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
             </div>
-          </div>
+        </div>
     </div>
 
 
@@ -194,4 +196,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
+
 </html>
