Added placeholder page files + linked

--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Other Products</a>
-                        <a class="dropdown-item" href="#">Sure-Step</a>
-                        <a class="dropdown-item" href="#">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="#">Warranty</a>
-                        <a class="dropdown-item" href="#">Photo Gallery</a>
-                        <a class="dropdown-item" href="#">Testimonials and Feedback</a>
+                        <a class="dropdown-item" href="/pages/sureStep/sureStep.html">Other Products</a>
+                        <a class="dropdown-item" href="/pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
+                        <a class="dropdown-item" href="/pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" href="/pages/contact/contact.html">Contact</a>
+                        <a class="dropdown-item" href="/pages/testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
             </ul>
