--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,9 +14,8 @@
 
     <!--<script src="js/price.js"></script>-->
 </head>
+
 <body>
-    
-    <!--NavBar-->
     <nav class="navbar fixed-top navbar-expand-lg justify-content-center">
         <a class="navbar-brand" href="#"><img src="../../img/EZIcon.png" alt="EZ Icon"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,32 +24,30 @@
         <div class="collapse navbar-collapse justify-content-around" id="navbarNavDropdown" style="flex-grow: 0;">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="../../../../index.html">Main Page</a>
+                    <a class="nav-link" href="../../index.html">Main Page</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="price.html">Dock Packages and Pricing</a>
+                    <a class="nav-link" href="pages/price/price.html">Dock Packages and Pricing</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Swim Floats</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="/pages/contact/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Other Links
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Other Products</a>
-                        <a class="dropdown-item" href="#">Sure-Step</a>
-                        <a class="dropdown-item" href="#">Dock Parts and Accessories</a>
-                        <a class="dropdown-item" href="#">Warranty</a>
-                        <a class="dropdown-item" href="#">Photo Gallery</a>
-                        <a class="dropdown-item" href="#">Testimonials and Feedback</a>
-                </div>
+                        <a class="dropdown-item" href="/pages/sureStep/sureStep.html">Other Products</a>
+                        <a class="dropdown-item" href="/pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
+                        <a class="dropdown-item" href="/pages/warranty/warranty.html">Warranty</a>
+                        <a class="dropdown-item" href="/pages/testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -171,7 +168,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$3,571</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -301,7 +298,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$7,161</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -330,7 +327,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$6,379</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -366,7 +363,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>5,195</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -395,7 +392,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$4,608</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -431,7 +428,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$5,487</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -460,7 +457,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$4,900</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -496,7 +493,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$3,803</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -525,7 +522,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$3,412</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -561,7 +558,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$7,455</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -590,7 +587,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$6,673</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -626,7 +623,7 @@
                                     <td>6 Feet Wide</td>
                                     <td>$9,718</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -655,43 +652,42 @@
                                     <td>6 Feet Wide</td>
                                     <td>$8,740</td>
                                 </tr>
-                              </table>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
             <p>Includes 14) 6' legs, bottom pads, safety caps, 4 finish end caps, 6 leg brace kits, 2 L-kits, 2 starter kits</p>
         </div>
-        
+
     </div>
 
     <!--Footer-->
     <div id="footer">
-          <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
+        <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
             <div class="card-body">
-              <h5 class="card-title">Copyright</h5>
-              <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
-              <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
+                <h5 class="card-title">Copyright</h5>
+                <p class="card-text">Copyright 2016 E-Z Docking Solutions LLC. All rights reserved.</p>
+                <a href="http://nhdocks.com/home#:~:text=Web%20Hosting%20by%20Aabaco" class="card-link">Web Hosting by Aabaco</a>
             </div>
-          </div>
-          <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
+        </div>
+        <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
             <div class="card-body">
-              <h5 class="card-title">Contact</h5>
-              <p class="card-text">ph: (603) 942-7355</p>
-              <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
+                <h5 class="card-title">Contact</h5>
+                <p class="card-text">ph: (603) 942-7355</p>
+                <a href="mailto:ezdocking@yahoo.com" class="card-link">ezdocking@yahoo.com</a>
             </div>
-          </div>
-          <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
+        </div>
+        <div class="card" style="width: 18rem; border: none; background-color: aliceblue;">
             <div class="card-body">
-              <h5 class="card-title">Address</h5>
-              <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
+                <h5 class="card-title">Address</h5>
+                <p class="card-text">E-Z Docking Solutions LLC 1548 First NH Turnpike Northwood, NH 03261</p>
             </div>
-          </div>
+        </div>
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
