--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -2,7 +2,16 @@
 
 <head>
 
-    <title>E-Z Docking Solutions LLC - Sure-Step</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-Z Docking Solutions LLC - Home</title>
+
+    <link rel="icon" href="../../img/EZIcon.png">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/sureStep.css">
+
 </head>
 
 <body class="lo_layout1wt">
