--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#">Swim Floats</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="/pages/contact/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -48,7 +48,6 @@
                         <a class="dropdown-item" href="/pages/sureStep/sureStep.html">Other Products</a>
                         <a class="dropdown-item" href="/pages/partsAcessories/partsAccessories.html">Dock Parts and Accessories</a>
                         <a class="dropdown-item" href="/pages/warranty/warranty.html">Warranty</a>
-                        <a class="dropdown-item" href="/pages/contact/contact.html">Contact</a>
                         <a class="dropdown-item" href="/pages/testimonialFeedback/testimonialFeedback.html">Testimonials and Feedback</a>
                     </div>
                 </li>
