--- a/pages/partsAcessories/partsAccessories.html
+++ b/pages/partsAcessories/partsAccessories.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/price.css">
+    <script src="js/PA.js"></script>
 
     <!--<script src="js/price.js"></script>-->
 </head>
