--- a/pages/sureStep/sureStep.html
+++ b/pages/sureStep/sureStep.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/sureStep.css">
     <script src="js/sureStep.js"></script>
-
 </head>
 
-<body class="lo_layout1wt">
+<body>
+
+    <!--NavBar-->
     <nav class="navbar fixed-top navbar-expand-lg justify-content-center">
-        <a class="navbar-brand" href="#"><img src="img/EZIcon.png" alt="EZ Icon"></a>
+        <a class="navbar-brand" href="/index.html"> <img src="./img/EZIcon.png" alt="EZ Icon"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +28,7 @@
                     <a class="nav-link" href="../../index.html">Main Page</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../../pages/price/price.html">Dock Packages and Pricing</a>
@@ -56,23 +57,28 @@
             <div id="headerZoneElement" class="editable rte flexContent" rel="itemGuid.sit.hc.001">
                 <h1 style="text-align: center;" data-mce-style="text-align: center;"><span style="color: #ff0000; line-height: normal; font-family: 'arial black', 'avant garde'; font-size: 36pt;" data-mce-style="color: #ff0000; line-height: normal; font-family: 'arial black', 'avant garde'; font-size: 36pt;">E-Z Docking Solutions</span></h1>
                 <p> </p>
-                <p style="text-align: center;" data-mce-style="text-align: center;"> </p>
-                <p style="text-align: center;" data-mce-style="text-align: center;"> </p>
-                <p style="text-align: center;" data-mce-style="text-align: center;"><span style="color: rgb(0, 255, 0); line-height: normal; font-size: 36pt;" data-mce-style="color: #00ff00; line-height: normal; font-size: 36pt;"><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></span></p>
-                <p style="text-align: center;" data-mce-style="text-align: center;"><br /></p>
-                <p style="text-align: center;" data-mce-style="text-align: center;"><br /></p>
-                <p style="text-align: center;" data-mce-style="text-align: center;"><span style="color: #ff0000; line-height: normal; font-family: arial black,avant garde; font-size: 36pt;" data-mce-style="color: #ff0000; line-height: normal; font-family: arial black,avant garde; font-size: 36pt;">(603) 942-7355﻿﻿</span></p>
+                <p> </p>
+                <p> </p>
+                <p><span style="color: rgb(0, 255, 0); line-height: normal; font-size: 36pt;"><strong>Check out our NEW Kayak Launch Dock in Other Products!!!</strong></span></p>
+                <p><br /></p>
+                <p><br /></p>
+                <p><span style="color: #ff0000; line-height: normal; font-family: arial black,avant garde; font-size: 36pt;" data-mce-style="color: #ff0000; line-height: normal; font-family: arial black,avant garde; font-size: 36pt;">(603) 942-7355</span></p>
             </div>
         </div>
     </div>
-    <div id="hMisc">
-        <div class="contactInfoContainer" style="width:auto;height:auto">
-            <p class="vcard"><span class="fn org"><span class="organization-name">E-Z Docking Solutions LLC</span></span><br><span class="adr"><span class="street-address">1548 First NH Turnpike</span><br><span class="locality">Northwood</span><span class="separator">, </span><span class="region">NH</span> <span class="postal-code">03261</span></span><span class="phoneNumbers"><br><span class="tel"><span class="type">ph: </span>(603) 942-7355</span></span><br><span class="mailtoWrapper"><a class="email" href="mailto:ezdocking@yahoo.com">ezdockin<wbr>g<wbr>@yahoo<wbr>.com</a></span>
+    <div>
+        <div class="contactInfoContainer">
+            <p class="vcard"><span><span class="organization-name">E-Z Docking Solutions LLC</span></span><br>
+
+                <span class="adr"><span class="street-address">1548 First NH Turnpike</span><br>
+                    <span class="locality">Northwood,</span>
+                    <span class="region">NH</span> <span class="postal-code">03261</span></span><span class="phoneNumbers"><br>
+                    <span class="tel"><span class="type">ph: </span>(603) 942-7355</span></span><br><span class="mailtoWrapper"><a class="email" href="mailto:ezdocking@yahoo.com">ezdockin<wbr>g<wbr>@yahoo<wbr>.com</a></span>
             <div class="social-contact-info"><span class="social-contact-info-wrap"><a href="https://www.facebook.com/E-Z-Docking-Solutions-110275449034725/" target="_blank"><img src="https://s.yimg.com/ln/assets/i/spacer.gif" width="16" height="16" alt="Facebook" class="small-icon-sprite ico-facebook"></a></span></div>
-            </p>
+
         </div>
     </div>
-    </div>
+
     <div id="wrapper" class="navpos_east">
         <div xmlns="" id="navigation" class="tglsty_arrow sub_dynamic">
             <ul id="mainNav" role="navigation">
